# qpick

./: .gitignore  README.md  pyproject.toml
frontend/: package.json
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: Banner.jsx  Cart.jsx  CoverCard.jsx  Footer.jsx  Header.jsx  HeadphoneCard.jsx  Home.jsx
frontend/src/services/: cart.js  order.js
frontend/src/utils/: session.js
qpick/api/: serializers.py  urls.py  views.py
qpick/qpick/: asgi.py  config.py  settings.py  urls.py  wsgi.py
qpick/store/: admin.py  models.py
qpick/store/migrations/: 0001_initial.py  0002_cover_headphone.py  0003_product_image.py  0004_alter_product_image.py  0005_alter_product_image.py  0006_product_currency.py  0007_cart_cartitem.py  0008_remove_cartitem_cart_cartitem_added_at_and_more.py  0009_cartitem_product_type.py  0010_cart_remove_cartitem_session_key_cartitem_cart.py  0011_product_quantity.py  0012_order_orderitem.py  0013_remove_product_currency.py
